Fixing buttons behavior on Iphones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,7 @@ body{
 		margin-bottom: 5px;
 	}
 	#done{
+		padding: unset;
 		font-size: 1rem;
 		padding:5px 50px;
 	}
